--- a/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Base.lproj/Main.storyboard
@@ -155,55 +155,56 @@
                                     <constraint firstAttribute="height" constant="10" id="7jo-PP-nkS"/>
                                 </constraints>
                             </view>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fxk-ti-oHS">
-                                <rect key="frame" x="0.0" y="306" width="414" height="128"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fxk-ti-oHS">
+                                <rect key="frame" x="0.0" y="306" width="414" height="130"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="o1i-Na-YKl"/>
+                                    <constraint firstAttribute="height" constant="130" id="3zI-qs-nZd"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="n4Y-DW-cfh">
-                                    <size key="itemSize" width="80" height="128"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="18" minimumInteritemSpacing="18" id="n4Y-DW-cfh">
+                                    <size key="itemSize" width="60" height="130"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CityForecastCell" id="elv-Zq-BKZ" customClass="CityForecastCell" customModule="Weather" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="80" height="128"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="37.5" height="130"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="mnd-M6-r5s">
-                                            <rect key="frame" x="0.0" y="0.0" width="80" height="128"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="37.5" height="130"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibM-p7-6om">
-                                                    <rect key="frame" x="21" y="10" width="38" height="21.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <rect key="frame" x="0.0" y="10" width="37.5" height="21"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.max.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ouf-yK-9Bg">
-                                                    <rect key="frame" x="20" y="41" width="40" height="40.5"/>
+                                                    <rect key="frame" x="6.5" y="50.5" width="25" height="25.5"/>
                                                     <color key="tintColor" systemColor="systemYellowColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="40" id="eMw-Y0-jka"/>
+                                                        <constraint firstAttribute="width" constant="25" id="eMw-Y0-jka"/>
                                                         <constraint firstAttribute="width" secondItem="ouf-yK-9Bg" secondAttribute="height" multiplier="1:1" id="ktc-tE-RUI"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mqQ-9m-YJJ">
-                                                    <rect key="frame" x="23.5" y="91.5" width="33" height="24"/>
+                                                    <rect key="frame" x="5.5" y="96" width="33" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="ibM-p7-6om" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="mnd-M6-r5s" secondAttribute="leading" constant="10" id="8so-aH-A0I"/>
+                                                <constraint firstItem="ibM-p7-6om" firstAttribute="leading" secondItem="mnd-M6-r5s" secondAttribute="leading" id="8so-aH-A0I"/>
                                                 <constraint firstItem="ibM-p7-6om" firstAttribute="centerX" secondItem="mnd-M6-r5s" secondAttribute="centerX" id="Gg1-e0-jJ2"/>
-                                                <constraint firstItem="mqQ-9m-YJJ" firstAttribute="top" secondItem="ouf-yK-9Bg" secondAttribute="bottom" constant="10" id="ISe-fI-9IM"/>
+                                                <constraint firstItem="mqQ-9m-YJJ" firstAttribute="top" secondItem="ouf-yK-9Bg" secondAttribute="bottom" constant="20" id="ISe-fI-9IM"/>
+                                                <constraint firstAttribute="bottom" secondItem="mqQ-9m-YJJ" secondAttribute="bottom" constant="10" id="N7d-uQ-bSL"/>
                                                 <constraint firstItem="ouf-yK-9Bg" firstAttribute="centerX" secondItem="mnd-M6-r5s" secondAttribute="centerX" id="QQA-0f-Rnv"/>
                                                 <constraint firstItem="ibM-p7-6om" firstAttribute="top" secondItem="mnd-M6-r5s" secondAttribute="top" constant="10" id="T3L-Td-dxa"/>
-                                                <constraint firstItem="mqQ-9m-YJJ" firstAttribute="centerX" secondItem="mnd-M6-r5s" secondAttribute="centerX" id="YHz-Zc-Eoe"/>
-                                                <constraint firstItem="ouf-yK-9Bg" firstAttribute="top" secondItem="ibM-p7-6om" secondAttribute="bottom" constant="10" id="w5p-mY-0HE"/>
+                                                <constraint firstItem="mqQ-9m-YJJ" firstAttribute="centerX" secondItem="mnd-M6-r5s" secondAttribute="centerX" constant="3" id="YHz-Zc-Eoe"/>
+                                                <constraint firstItem="ouf-yK-9Bg" firstAttribute="top" secondItem="ibM-p7-6om" secondAttribute="bottom" constant="20" id="w5p-mY-0HE"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
@@ -213,9 +214,13 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="qnR-4K-4ve" id="gRF-fk-KZz"/>
+                                    <outlet property="delegate" destination="qnR-4K-4ve" id="Rzm-yG-u2y"/>
+                                </connections>
                             </collectionView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YBE-7T-n1e">
-                                <rect key="frame" x="0.0" y="474" width="414" height="339"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YBE-7T-n1e">
+                                <rect key="frame" x="0.0" y="476" width="414" height="337"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="kEG-pi-EjZ">
                                     <size key="itemSize" width="128" height="128"/>
